chore: cleanup warnings and refactor core services